Added detailsAct & other changes I don't remember
-Added detailsActivity to show details about a particular activity.
-shows name, rating, releaseDate & overview
-also shows posterImage and backDropImage
-shows backdrop image in appbar

-detailsActivity is launched when an item in DiscoverAct is choosed

--- a/app/src/main/res/layout/fragment_discover_movies.xml
+++ b/app/src/main/res/layout/fragment_discover_movies.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:background="#111"
+        android:drawSelectorOnTop="true"
         android:numColumns="2" />
 
 </FrameLayout>
