--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,22 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <!--<dimen name="activity_horizontal_margin">16dp</dimen>-->
+    <!--<dimen name="activity_vertical_margin">16dp</dimen>-->
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="app_bar_height">256dp</dimen>
+    <dimen name="thumb_img_height">200dp</dimen>
+    <dimen name="thumb_img_overlay_top">80dp</dimen>
+
+    <dimen name="movie_details_margin">10dp</dimen>
+
+    <dimen name="movie_title_txt_size">24sp</dimen>
+    <dimen name="movie_rating_txt_size">16sp</dimen>
+    
+    <dimen name="cardview_padding_top">24dp</dimen>
+    <dimen name="cardview_padding">16dp</dimen>
 </resources>
