--- a/app/src/main/res/menu/menu_discover_movies_fragment.xml
+++ b/app/src/main/res/menu/menu_discover_movies_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <group
         android:checkableBehavior="single"
         android:visible="true">
@@ -11,4 +12,10 @@
             android:id="@+id/menu_item_sort_top_rated"
             android:title="@string/action_sort_top_rated" />
     </group>
+
+    <item
+        app:showAsAction="always"
+        android:id="@+id/menu_item_display_fav"
+        android:title="@string/action_display_fav"
+        android:icon="@drawable/ic_action_fav_active"/>
 </menu>
