--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <!--<color name="colorAccent">#FF4081</color>-->
 
     <color name="background">#303030</color>
+    <color name="card_bg">#424242</color>
 
     <color name="txtColor">#fff</color>
     <color name="txtColorSec">#bcbcbc</color>
