--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -9,13 +9,13 @@
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
-    tools:context=".MainActivity">
+    tools:context="com.abhishek.popularmovies.MainActivity">
     <fragment
         android:id="@+id/fragment_movies"
         android:name="com.abhishek.popularmovies.DiscoverMoviesFragment"
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="match_parent"
+        android:layout_weight="2"
         tools:layout="@android:layout/list_content"/>
 
     <ScrollView
@@ -24,6 +24,6 @@
         android:layout_weight="4">
         <FrameLayout android:id="@+id/movie_detail_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content" />
     </ScrollView>
 </LinearLayout>
